# anemoi-registry

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: changelog-release-update.yml  downstream-ci-hpc.yml  python-publish.yml  python-pull-request.yml  readthedocs-pr-update.yml
docs/: conf.py  configuring.rst  index.rst  installing.rst  naming-conventions.rst  requirements.txt
docs/admin/: entry.rst  experiments.rst  tasks.rst  training.rst  update.rst
docs/cli/: datasets.rst  experiments.rst  introduction.rst  list.rst  replicas.rst  site.rst  weights.rst
docs/data-management/: overview.rst  steward.rst
docs/howto/: dataset.rst  datasets.rst  experiments.rst  models.rst  training.rst
docs/modules/: dates.rst  s3.rst
src/anemoi/registry/: __init__.py  __main__.py  config.yaml  configuration.py  rest.py  robust.py  tasks.py  utils.py  workers.py
src/anemoi/registry/commands/: __init__.py  _base.py  base.py  datasets.py  download.py  entry.py  experiments.py  list.py  resources.py  settings.py  tasks.py  trainings.py  update.py  update.readme.md  upload.py  weights.py  worker.py
src/anemoi/registry/entry/: __init__.py  dataset.py  experiment.py  resource.py  training.py  weights.py
src/anemoi/registry/v1/: __init__.py  config.yaml  configuration.py  rest.py  tasks.py
src/anemoi/registry/v1/commands/: __init__.py  base.py  datasets.py  entry.py  experiments.py  list.py  settings.py  tasks.py  trainings.py  update.py  upload.py  weights.py  worker.py
src/anemoi/registry/v1/entry/: __init__.py  dataset.py  experiment.py  training.py  weights.py
src/anemoi/registry/v1/workers/: __init__.py  delete_dataset.py  dummy.py  transfer_dataset.py
src/anemoi/registry/v2/: __init__.py  configuration.py  rest.py  tasks.py  utils.py
src/anemoi/registry/v2/commands/: base.py  dataset.py  download.py  entry.py  experiment.py  model.py  replica.py  settings.py  site.py  siteworker.py  steward.py  task.py  training.py  update.py  upload.py  weights.py
src/anemoi/registry/v2/entry/: __init__.py  dataset.py  experiment.py  replica.py  site.py  training.py  weights.py
src/anemoi/registry/v2/site/: __init__.py  auxiliary.py  bootstrap.py  config.py  monitoring.py  parsers.py  setup_assistant.py  update_auxiliary.py
src/anemoi/registry/v2/site/scripts/: lfs-project-quota.sh
src/anemoi/registry/v2/workers/: __init__.py  delete_dataset.py  dummy.py  monitor_datasets.py  monitor_storage.py  transfer_dataset.py  update_auxiliary.py
src/anemoi/registry/workers/: __init__.py  delete_dataset.py  dummy.py  transfer_dataset.py  update_dataset.py
tests/: README.md  config.yaml  conftest.py  dummy-checkpoint.ckpt  dummy-config-training.json  dummy-recipe-dataset.yaml  dummy-recipe-experiment.yaml  dummy-recipe-training.json  prepml_training_metadata.json  test.json  test_all.py  test_entry.py  test_rest.py
tests/cli/: test_cli.py  test_dataset_cli.py  test_weights_cli.py
tests/integration/: conftest.py  test_python_api.py  test_s3_operations.py
tests/unit/: test_configuration.py  test_entry_paths.py  test_rest_client.py  test_s3_operations.py
