#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[project]
name = "anemoi-registry"

description = "A package to manage a registry or data-driven forecasts."
keywords = [
  "ai",
  "registry",
  "tools",
]

license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = [
  "version",
]

dependencies = [
  "anemoi-datasets",
  "jsonpatch",
  "requests",
]

optional-dependencies.all = [
  "boto3",
]

optional-dependencies.dev = [
  "boto3",
  "nbsphinx",
  "pandoc",
  "pytest",
  "sphinx",
  "sphinx-argparse<0.5",
  "sphinx-rtd-theme",
]

optional-dependencies.docs = [
  "nbsphinx",
  "pandoc",
  "sphinx",
  "sphinx-argparse<0.5",
  "sphinx-rtd-theme",
]

optional-dependencies.s3 = [
  "boto3",
]

optional-dependencies.tests = [
  "pytest",
]

urls.Documentation = "https://anemoi-registry.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/anemoi-registry/"
urls.Issues = "https://github.com/ecmwf/anemoi-registry/issues"
urls.Repository = "https://github.com/ecmwf/anemoi-registry/"
scripts.anemoi-registry = "anemoi.registry.__main__:main_PYTHON_ARGCOMPLETE_OK"

[tool.setuptools.package-data]
"anemoi.registry" = [
  "*.yaml",
]

[tool.setuptools_scm]
version_file = "src/anemoi/registry/_version.py"
